@@ -198,6 +198,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6062: In distutils, fixed the package option of build_ext. Feedback 
+  and tests on pywin32 by Tim Golden.
+
 - Issue #6046: Fixed the library extension when distutils build_ext is used
   inplace. Initial patch by Roumen Petrov.
 
